# picto_translation

./: .env  .gitattributes  .gitignore  README.md  main.py  pyproject.toml
data/wsd_model/: README.md  model_weights_wsd0_camembert_base
data/wsd_model/data_wsd/: config.json  dev  output_vocabulary0
nwsd/src/ufsac/common/: WordnetHelper.py
