[project]
name = "picto-grammar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9, <=3.10"
dependencies = [
    "aiohttp==3.8.4",
    "aiosignal==1.3.1",
    "appdirs==1.4.4",
    "async-timeout==4.0.2",
    "attrs==23.1.0",
    "audioread==3.0.1",
    "blis==0.7.11",
    "boto3==1.26.87",
    "botocore==1.29.87",
    "brotlipy==0.7.0",
    "catalogue==2.0.8",
    "certifi==2024.12.14",
    "cffi==1.17.1",
    "chardet==5.1.0",
    "charset-normalizer==3.1.0",
    "click==8.1.3",
    "colorama==0.4.6",
    "confection==0.0.4",
    "configargparse==1.5.3",
    "contourpy==1.3.0",
    "cryptography==44.0.0",
    "cycler==0.11.0",
    "cymem==2.0.7",
    "datasets==2.10.0",
    "decorator==5.1.1",
    "dill==0.3.6",
    "dpcpp-cpp-rt==2025.0.4",
    "evaluate==0.4.0",
    "filelock==3.9.0",
    "fonttools==4.39.0",
    "fr-dep-news-trf",
    "frozenlist==1.3.3",
    "fsspec[http]==2023.6.0",
    "huggingface-hub==0.13.0",
    "idna==3.10",
    "importlib-resources==5.12.0",
    "intel-cmplr-lib-rt==2025.0.4",
    "intel-cmplr-lib-ur==2025.0.4",
    "intel-cmplr-lic-rt==2025.0.4",
    "intel-opencl-rt==2025.0.4",
    "intel-openmp==2025.0.4",
    "intel-sycl-rt==2025.0.4",
    "jinja2==3.1.2",
    "jiwer==3.0.2",
    "jmespath==1.0.1",
    "joblib==1.2.0",
    "jpype1==1.4.1",
    "kiwisolver==1.4.4",
    "langcodes==3.3.0",
    "lazy-loader==0.3",
    "librosa==0.10.2.post1",
    "llvmlite==0.41.0",
    "lxml==4.9.3",
    "markupsafe==2.1.2",
    "matplotlib==3.9.4",
    "mkl==2025.0.1",
    "mkl-fft==1.3.6",
    "mkl-random==1.2.2",
    "mkl-service==2.4.0",
    "msgpack==1.0.7",
    "multidict==6.0.4",
    "multiprocess==0.70.14",
    "murmurhash==1.0.9",
    "nltk==3.8.1",
    "numba==0.58.0",
    "numpy==1.24.4",
    "packaging==23.0",
    "pandas==1.5.3",
    "pathy==0.10.1",
    "pillow==9.4.0",
    "platformdirs==4.3.6",
    "pooch==1.8.2",
    "portalocker==2.8.2",
    "preshed==3.0.8",
    "protobuf==3.20.3",
    "pyarrow==12.0.1",
    "pyaudio==0.2.13",
    "pycparser==2.22",
    "pydantic==1.10.6",
    "pydub==0.25.1",
    "pyopenssl==24.3.0",
    "pyparsing==3.0.9",
    "pysocks==1.7.1",
    "python-dateutil==2.8.2",
    "pytorch-pretrained-bert==0.6.2",
    "pytz==2022.7.1",
    "pyyaml==6.0",
    "rapidfuzz==2.13.7",
    "regex==2022.10.31",
    "requests==2.28.2",
    "responses==0.18.0",
    "s3transfer==0.6.0",
    "sacrebleu==2.3.1",
    "scikit-learn==1.3.1",
    "scipy==1.10.0",
    "sentencepiece==0.1.97",
    "six==1.17.0",
    "smart-open==6.3.0",
    "sounddevice==0.4.6",
    "soundfile==0.12.1",
    "sox==1.4.1",
    "soxr==0.3.6",
    "spacy==3.5.0",
    "spacy-alignments==0.9.0",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.4",
    "spacy-transformers==1.2.2",
    "srsly==2.4.6",
    "srt==3.5.2",
    "sv-ttk==2.4",
    "tabulate==0.9.0",
    "tbb==2022.0.0",
    "tcmlib==1.2.0",
    "text2num==2.5.0",
    "textgrid==1.5",
    "thinc==8.1.9",
    "threadpoolctl==3.2.0",
    "tk==0.1.0",
    "tokenizers==0.13.2",
    "torch==1.10.1",
    "torchtext==0.11.1",
    "tqdm==4.65.0",
    "transformers==4.26.1",
    "typer==0.7.0",
    "typing-extensions==4.5.0",
    "umf==0.9.1",
    "urllib3==1.26.20",
    "vosk==0.3.45",
    "wasabi==1.1.1",
    "websockets==10.4",
    "xxhash==3.2.0",
    "yarl==1.9.2",
    "zipp==3.15.0",
]

[tool.uv.sources]
fr-dep-news-trf = { url = "https://github.com/explosion/spacy-models/releases/download/fr_dep_news_trf-3.5.0/fr_dep_news_trf-3.5.0-py3-none-any.whl" }
